# my-library

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  story.md  task.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/src/: config.py  db.py  db_smoke.py  library_queries.py  main.py  ndl_client.py
backend/tests/: conftest.py  test_catalog_endpoints.py  test_db_config.py  test_db_init.py  test_db_smoke.py  test_health.py  test_library_endpoints.py  test_library_queries.py  test_main_entrypoint.py  test_minimum_api_cases.py  test_ndl_client.py  test_series_endpoints.py  test_volume_endpoints.py
docs/: DEVELOPMENT_RULES.md  RDD.md  README.md
frontend/: .env.example  .gitignore  .prettierignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/search/: SearchTabPage.module.css  SearchTabPage.tsx
frontend/src/lib/: apiError.ts  libraryRefreshSignal.ts  seriesVolumeSignal.ts
